deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nessus
  namespace: default
spec:
  selector:
    matchLabels:
      app: nessus
  template:
    metadata:
      labels:
        app: nessus
    spec:
      containers:
        - name: nessus
          image: >-
            mvthul/nessus
          ports:
            - name: http
              containerPort: 8834
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /nessus
          command: ["/bin/sh"]
          args: ["-c", "/nessus/update.sh $(URL)"]
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nessus-config
