service.yml
kind: Service
apiVersion: v1
metadata:
  name: nessus
  namespace: default
  spec:
  ports:
    - name: http
      protocol: TCP
      port: 8834
      targetPort: http
  type: ClusterIP
