ingress-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nessus
  namespace: default
spec:
  rules:
    - host: nessus.hostname.com
      http:
        paths:
          - backend:
              service:
                name: nessus
                port:
                  number: 8834
            path: /
            pathType: Prefix
